# pride-geode

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  about.md  changelog.md  mod.json
.github/workflows/: build.yml
resources/: streaks.json
src/: PrideFakePlayer.cpp  PrideFakePlayer.hpp  PrideFakeStreak.cpp  PrideFakeStreak.hpp  PrideManager.cpp  PrideManager.hpp  PridePlayerShipSprite.cpp  PridePlayerShipSprite.hpp  PridePreviewLayer.cpp  PridePreviewLayer.hpp  PrideSelectPopup.cpp  PrideSelectPopup.hpp  PrideStreakData.hpp
src/hooks/: CCMotionStreak.cpp  GJGarageLayer.cpp  GameManager.cpp  MenuGameLayer.cpp  PlayerObject.cpp
